fixed legend issue but chart is off center

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -433,7 +433,7 @@ button .glyphicon {
 }
 
 #bar-svg {
-    width: 400px;
+    /*width: 900px;*/
 }
 
 .averages {
