--- a/frontend/static/css/time-series.css
+++ b/frontend/static/css/time-series.css
@@ -49,5 +49,5 @@
 .chart {
   display: block;
   margin: 0 auto;
-  width: 680px;
+  width: 780px;
 }
